--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1,13 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-    * {
-        @apply focus:outline-none focus:ring-2 focus:ring-outline !important;
-    }
-}
-
-@layer components {}
-
-@layer utilities {}
+/* Tailwind */
+@import "base";
+@import "components";
+@import "utilities";
